--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -2,5 +2,5 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.port=465
 mail.smtp.ssl.enable=true
 mail.smtp.auth=true
-sender.name=nikitinroma2605@gmail.com
-sender.password=mjxdljbhtizdjpza
+sender.name=*sender email*
+sender.password=*sender password*
