--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>commons-codec</artifactId>
             <version>1.11</version>
         </dependency>
+        <!-- Dependency for json-->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
